# ChangeLog for app-pda/gnupod
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-pda/gnupod/ChangeLog,v 1.8 2005/04/08 18:37:25 liquidx Exp $

*gnupod-0.98 (08 Apr 2005)

  08 Apr 2005; Alastair Tse <liquidx@gentoo.org> -gnupod-0.94.ebuild,
  gnupod-0.97.ebuild, +gnupod-0.98.ebuild:
  version bump (#84526)

*gnupod-0.97 (03 Jan 2005)

  03 Jan 2005; MATSUU Takuto <matsuu@gentoo.org> +gnupod-0.97.ebuild:
  Version bumped.

*gnupod-0.94 (23 Jun 2004)

  23 Jun 2004; MATSUU Takuto <matsuu@gentoo.org> +gnupod-0.94.ebuild:
  Version bumped.

  29 May 2004; Danny van Dyk <kugelfang@gentoo.org> gnupod-0.27.ebuild:
  Marked ~amd64.

  30 Aug 2003; Alastair Tse <liquidx@gentoo.org> gnupod-0.27.ebuild,
  metadata.xml:
  bumped back to ~x86 because dependencies are not stable

*gnupod-0.27 (19 Mar 2003)

  19 Mar 2003; Zach Welch <zwelch@gentoo.org> gnupod-0.27.ebuild:
  new ebuild; see bug 16808
