@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-pda/gnupod/gnupod-0.97.ebuild,v 1.2 2005/04/08 18:37:25 liquidx Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-pda/gnupod/gnupod-0.97.ebuild,v 1.3 2005/04/09 20:36:57 hansmi Exp $
 
 inherit perl-module
 
@@ -10,7 +10,7 @@ SRC_URI="http://blinkenlights.ch/gnupod-dist/stable/${P}.tgz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="x86 ~ppc ~amd64"
+KEYWORDS="x86 ppc ~amd64"
 IUSE=""
 
 # perl-5.8.0 contains Getopt-Long and Digest-MD5.
