@@ -1,6 +1,10 @@
 # ChangeLog for app-pda/jpilot
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-pda/jpilot/ChangeLog,v 1.24 2005/03/31 20:53:50 blubb Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-pda/jpilot/ChangeLog,v 1.25 2005/04/09 20:38:38 hansmi Exp $
+
+  09 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
+  jpilot-0.99.7-r1.ebuild:
+  Stable on ppc.
 
   31 Mar 2005; <blubb@gentoo.org> jpilot-0.99.7-r1.ebuild:
   stable on amd64
