@@ -1,6 +1,9 @@
 # ChangeLog for app-pda/gnupod
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-pda/gnupod/ChangeLog,v 1.8 2005/04/08 18:37:25 liquidx Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-pda/gnupod/ChangeLog,v 1.9 2005/04/09 20:36:57 hansmi Exp $
+
+  09 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> gnupod-0.97.ebuild:
+  Stable on ppc.
 
 *gnupod-0.98 (08 Apr 2005)
 
